update redhat and jboss licenses
git-svn-id: file:///srv/svn/publican/trunk@617 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/make/Makefile.RedHat
+++ b/publican-redhat/make/Makefile.RedHat
@@ -1,7 +1,7 @@
 PROD_URL	?= http://www.redhat.com
 DOC_URL		?= http://www.redhat.com/docs
 STRICT		= 1
-LICENSE		= Open Publication + Restrictions
+LICENSE		= Open Publication
 
 # hack, RHEL SHIPPED products where in RHEL5 before this multi-product layout was in place
 # So we have to use a different naming scheme for the 4 shipped books
