--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -158,6 +158,8 @@ rm -rf $RPM_BUILD_ROOT
 - Added newline after country. BZ #477573
 - Fix minimum font size breaking TOC. BZ #476884
 - Fix missing font-metric files. BZ #479592
+- Updated redhat brand license. BZ #478405
+- Update jboss brand license. BZ #478416
 
 * Mon Dec 1 2008 Jeff Fearn <jfearn@redhat.com> 0.39
 - Disable make.graphic.viewport. BZ #467368
