--- a/publican-jboss/make/Makefile.JBoss
+++ b/publican-jboss/make/Makefile.JBoss
@@ -1,7 +1,7 @@
 PROD_URL	?= https://www.jboss.com
 DOC_URL		?= http://www.redhat.com/docs
 STRICT		= 1
-LICENSE		= Creative Commons Attribution-NonCommercial-ShareAlike
+LICENSE		= Open Publication
 
 pre::
 	@if [[ "$(PRODUCT)" == "Documentation" ]]; then \
