ship PDF with indic web packages
git-svn-id: file:///srv/svn/publican/trunk@620 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -160,6 +160,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix missing font-metric files. BZ #479592
 - Updated redhat brand license. BZ #478405
 - Update jboss brand license. BZ #478416
+- Ship PDF with Indic web packages.
 
 * Mon Dec 1 2008 Jeff Fearn <jfearn@redhat.com> 0.39
 - Disable make.graphic.viewport. BZ #467368
