--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,8 +5,8 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
-Version:	0.39
-Release:	2.t17%{?dist}
+Version:	0.40
+Release:	0%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
