--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,8 +5,8 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
-Version:	0.40
-Release:	1%{?dist}
+Version:	0.41
+Release:	5.t1%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -146,6 +146,11 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
+* Mon Jan 19 2009 Jeff Fearn <jfearn@redhat.com> 0.41
+- Fix Source tar name.
+- Fix brew srpm path
+- Added OS_VER to allow over ride of OS srpm is created for.
+
 * Mon Jan 5 2009 Jeff Fearn <jfearn@redhat.com> 0.40
 - Fix DRAFT mode in web docs.
 - Fix TOC CSS spacing.
