--- a/publican/publican.desktop
+++ b/publican/publican.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Publican
-Comment=How to use Publican
+Name=Publican - Users Guide
+Comment=Publishing books, articles, papers and multi-volume sets with DocBook XML
 Exec=xdg-open @@FILE@@
 Icon=@@ICON@@
 Categories=Documentation;Publishing;X-Red-Hat-Base;
