Support chapterinfo keywordset keyword tags
git-svn-id: file:///srv/svn/publican/trunk@630 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -148,6 +148,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix Source tar name.
 - Fix brew srpm path
 - Added OS_VER to allow over ride of OS srpm is created for.
+- Support chapterinfo keywordset keyword tags.
 
 * Mon Jan 5 2009 Jeff Fearn <jfearn@redhat.com> 0.40
 - Fix DRAFT mode in web docs.
