Add SRC_URL. BZ #482968
git-svn-id: file:///srv/svn/publican/trunk@631 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -509,6 +509,8 @@ help_params::
 	@echo
 	@echo "PROD_URL: URL for top left link in html. Currently: $(PROD_URL)"
 	@echo
+	@echo "SRC_URL: URL for the public src directory. Currently: $(SRC_URL)"
+	@echo
 	@echo "SHOW_REMARKS:  0 or 1. Display contents of remark tags in output? Currently $(SHOW_REMARKS)"
 	@echo
 	@echo "TOC_SECTION_DEPTH:  How many levels of sections should be included in the main TOC? Currently: $(TOC_SECTION_DEPTH)"
