--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,8 +5,8 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
-Version:	0.41
-Release:	5.t7%{?dist}
+Version:	0.44
+Release:	0%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -145,8 +145,9 @@ rm -rf $RPM_BUILD_ROOT
 
 %changelog
 * Thu Jan 29 2009 Jeff Fearn <jfearn@redhat.com> 0.42
-- Support chapterinfo keywordset keyword tags.
+- Support chapterinfo, keywordset & keyword tags.
 - Add SRC_URL. BZ #482968
+- Fix web package removal when dep package has been removed.
 
 * Mon Jan 19 2009 Jeff Fearn <jfearn@redhat.com> 0.41
 - Fix Source tar name.
