--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.42
-Release:	0%{?dist}
+Release:	0.t1%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -144,6 +144,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
+* Mon Feb 09 2009  Jeff Fearn <jfearn@redhat.com> 0.43
+- Fix many warnings about 'body-start() called from outside an fo:list-item' BZ #484628
+
 * Thu Jan 29 2009 Jeff Fearn <jfearn@redhat.com> 0.42
 - Support chapterinfo, keywordset & keyword tags.
 - Add SRC_URL. BZ #482968
