--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -113,7 +113,7 @@ pre::
 		echo "you must set <title> in $(XML_LANG)/$(DOC_TYPE)_Info.xml"; \
 		exit 1; \
 	fi
-	@if [[ "$(DOCNAME)" =~ "^a-zA-Z_" ]]; then \
+	@if [[ "$(DOCNAME)" =~ "[^a-zA-Z_]" ]]; then \
 		echo; \
 		echo "*ERROR: DOCNAME can only contain 'a-z', 'A-Z' and '_'*"; \
 		echo "'$(DOCNAME)' is not valid"; \
