--- a/publican-gimp/Makefile
+++ b/publican-gimp/Makefile
@@ -1,15 +1,15 @@
-REAL_BRAND	= GIMP
-BRAND	= gimp
+BRAND	= GIMP
 SPEC	= publican-$(BRAND).spec
 NAME	= publican-$(BRAND)
 VERSION = $(shell grep 'Version:' $(SPEC) | sed -e 's/Version:\s*\(.*\)$$/\1/g')
 RELEASE = $(shell grep 'Release:' $(SPEC) | sed -e 's/Release:\s*\(.*\)$$/\1/g' | sed -e 's/...dist.//')
 PWD	= $(shell pwd)
 RPMDIR	=  $(PWD)/tmp/rpm
-OS_VER	= $(shell uname -r | perl -p -e 's/^[^a-z]*([a-z]+[0-9]+).*$$/\1/')
+OS_VER	?= .$(shell uname -r | perl -p -e 's/^[^a-z]*([a-z]+[0-9]+).*$$/\1/')
 ifeq "$(OS_VER)" "ELx"
 OS_VER	= "el4"
 endif
+VERBOSE	?= 0
 
 TAR_NAME = $(NAME)-$(VERSION)
 LANGS = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
@@ -18,8 +18,8 @@ FILES	= pot README Makefile $(LANGS) en-US Book_Template Article_Template Set_Te
 
 local: srpm
 	@echo "Start $@"
-	@rpmbuild --define "dist .$(OS_VER)" --define "_topdir $(RPMDIR)" -bb $(RPMDIR)/SPECS/$(SPEC)
-	@sudo rpm -Uvh $(RPMDIR)/RPMS/noarch/$(TAR_NAME)-$(RELEASE).$(OS_VER).noarch.rpm
+	@rpmbuild --define "dist $(OS_VER)" --define "_topdir $(RPMDIR)" -bb $(RPMDIR)/SPECS/$(SPEC)
+	@sudo rpm -Uvh $(RPMDIR)/RPMS/noarch/$(TAR_NAME)-$(RELEASE)$(OS_VER).noarch.rpm
 	@echo "End $@"
 
 srpm: dist
@@ -28,7 +28,7 @@ srpm: dist
 	@cd $(RPMDIR) && mkdir -p  SPECS  SRPMS BUILD SOURCES RPMS/noarch
 	@cp $(TAR_NAME).tgz $(RPMDIR)/SOURCES/.
 	@cp publican-$(BRAND).spec $(RPMDIR)/SPECS/.
-	@rpmbuild --define "dist .$(OS_VER)" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/publican-$(BRAND).spec
+	@rpmbuild --define "dist $(OS_VER)" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/publican-$(BRAND).spec
 	@echo "End $@"
 
 dist: clean
@@ -96,6 +96,10 @@ Common_Content::
 	@echo "Start $@"
 	@for lang in $(LANGS) en-US; do \
 		mkdir -p $(PWD)/Common_Content/$(BRAND)/$$lang; \
+		foo=`echo "$$lang" | cut -f 1 -d '-'`; \
+		pushd $(PWD)/Common_Content/$(BRAND) > /dev/null; \
+		ln -s $$lang $$foo; \
+		popd > /dev/null; \
 	done
 	@cd en-US; \
 	for xml_file in `find . -maxdepth 1 -name "*.xml"`; do \
@@ -103,24 +107,24 @@ Common_Content::
 		for lang in $(LANGS); do \
 			if [ ! -f ../$$lang/$$po_file ]; then \
 				echo "../$$lang/$$po_file MISSING Using en-US file"; \
-				cp $$xml_file $(PWD)/Common_Content/$(REAL_BRAND)/$$lang/$$xml_file; \
+				cp $$xml_file $(PWD)/Common_Content/$(BRAND)/$$lang/$$xml_file; \
 			else \
-				po2xml $$xml_file ../$$lang/$$po_file > $(PWD)/Common_Content/$(REAL_BRAND)/$$lang/$$xml_file; \
+				po2xml $$xml_file ../$$lang/$$po_file > $(PWD)/Common_Content/$(BRAND)/$$lang/$$xml_file; \
 			fi; \
 		done; \
-		cp $$xml_file $(PWD)/Common_Content/$(REAL_BRAND)/en-US/$$xml_file; \
+		cp $$xml_file $(PWD)/Common_Content/$(BRAND)/en-US/$$xml_file; \
 	done; \
 	cd ..; \
 	for lang in $(LANGS) en-US; do \
 		if [ -d $$lang/css ]; then \
-			mkdir -p  $(PWD)/Common_Content/$(REAL_BRAND)/$$lang/css; \
-			cp -rf $$lang/css/*.css  $(PWD)/Common_Content/$(REAL_BRAND)/$$lang/css/.; \
+			mkdir -p  $(PWD)/Common_Content/$(BRAND)/$$lang/css; \
+			cp -rf $$lang/css/*.css  $(PWD)/Common_Content/$(BRAND)/$$lang/css/.; \
 		fi; \
 	done; \
 	for lang in $(LANGS) en-US; do \
 		if [ -d $$lang/images ]; then \
-			mkdir -p  $(PWD)/Common_Content/$(REAL_BRAND)/$$lang/images; \
-			cp -rf $$lang/images/*  $(PWD)/Common_Content/$(REAL_BRAND)/$$lang/images/.; \
+			mkdir -p  $(PWD)/Common_Content/$(BRAND)/$$lang/images; \
+			cp -rf $$lang/images/*  $(PWD)/Common_Content/$(BRAND)/$$lang/images/.; \
 		fi; \
 	done; \
 	cd $(PWD);
