--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -8,7 +8,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.42
-Release:	0.t27%{?dist}
+Release:	0.t28%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -97,7 +97,6 @@ solely on using the publican tools.
 
 %build
 %{__make} OS_VER=%{?dist} docs
-#./fop-fonts --dist=%{?dist}
 
 %install
 rm -rf $RPM_BUILD_ROOT
@@ -159,11 +158,12 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Mon Feb 09 2009  Jeff Fearn <jfearn@redhat.com> 0.43
+* Wed Feb 25 2009  Jeff Fearn <jfearn@redhat.com> 0.43
 - Fix many warnings about 'body-start() called from outside an fo:list-item' BZ #484628
 - Fix Initial build of new lang failing. BZ #485179
 - Add lang to final doc root node. BZ #486162
 - Add embed for stanky IE. BZ #486501
+- Add symlinks for langauges without country codes. BZ #487256
 - Rolled in following from fedora devel spec
 - - Mon Feb  9 2009 Jens Petersen <petersen@redhat.com> - 0.40-4
 - - update the sazanami-fonts subpackage names
